--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <ul>
+        <li>home</li>
+        <li>about</li>
+    </ul>
     
 </body>
 </html>
